--- a/public/styles/colors.less
+++ b/public/styles/colors.less
@@ -1,58 +1,75 @@
 
 //----------------------App------------------
-@colorPrimary: #ffa400;
-@colorPrimaryLigth: #ffba39;
-@colorPrimaryDark: #80461f;
-@colorPrimaryDarkLigth: #9b4e1b;
-@colorPrimaryDarkest: #3b2f27;
-@colorPrimaryDarkestLigth: #ffba39;
-@colorThree: #de6200;
-@colorThreeLigth: #c4651c;
-@colorFour: #474747;
-@colorFourLigth: #616161;
-@colorFive: #84e52a;
-@colorFiveLigth: #85cd42;
-@colorFiveLigthter: #c6e7a6;
+//@colorPrimary: #0045e6;
+//@colorPrimaryLigth: #1a81ff;
+//@colorPrimaryLigther: #4d9dff;
+//@colorPrimaryDark:  #272626;
+//@colorPrimaryBlueDark: #204a57 16.63%;
+//@colorPrimaryBlue: #01ade3e4 97.92%;
+//@colorPrimaryBlueLigth: #86c6dbe3 100%;
+//@colorSecondary: #6e4ccc;
+//@colorSecondaryLigth: #8e74d8;
+//@colorThree: #1B1B40;
+//@colorThreeLigth: #ffffff;
+//@colorFour: #ffffff;
+//@colorFourLigth: #ffffff;
+//@colorFive: #f7c149;
+//@colorFiveLigth: #f9cc6c;
+//@colorFiveLigthter: #c6e7a6;
+
 //----------------------Texts------------------
-@colorPrimaryText: #ffffff;
-@colorSecundaryText: #f2d9a6;
-@colorSecundaryTextLigth: #f5e0b8;
+@colorPrimaryText: #474747;
+//@colorPrimaryTextLigth: #666666;
+//@colorPrimaryTextDark: #212121;
+@colorSecondaryText: #08fee1;
+//@colorSecondaryTextLigth: #67feed;
+//@colorThreeText: @colorPrimary;
+//@colorThreeTextLigther: @colorPrimaryLigther;
+
 //----------------------Colors------------------
 @colorWhite: #ffffff;
+//@colorBlack: #161616;
 @colorLight: #ffffff;
-@colorLightDark: #cccccc;
-@colorDark: #474747;
-@colorDarkLigth: #6e6d6d;
-@colorDarkLighter: #727272cc;
+//@colorLightDark: #cccccc;
+//@colorDark: #474747;
+//@colorDarkLigth: #6e6d6d;
+//@colorDarkLighter: #727272cc;
+//@colorDarkDarker: #272727cb;
+@colorTransparentGrey: #666666a4;
 @simpleColorYellow: #ffcc5e;
-@simpleColorGreen: #3ab415;
+@simpleColorGreen: #158f20;
+
 //----------------------Specials------------------
-//---Nav
-@colorNavLogo: @colorLight;
-@colorNavButtons: @colorThree;
-@colorNavButtonsLigth: @colorThreeLigth;
-@colorNavNavButtonsText: @colorLight;
-//---Footer
-@colorFooterBackground: @colorFour;
-@colorFooterBackText: @colorPrimaryText;
-@colorFooterTitles: @colorThree;
-//---Backgrounds
-@backgroundFallBack1: #e2e2e2;
-@backgroundImage1: url(/images/background.jpg);
 //---Others
-@colorSuccess: #3ab415;
-@colorSuccessLigth: #56d42f;
+//@colorSuccess: #3ab415;
+//colorSuccessLigth: #56d42f;
+//@colorGreenLight: #bcf5c1;
 @colorError: #ff4d4f;
-@colorErrorLigth: #e46769;
-@colorTransparentGrey: #64646481;
+//@colorErrorLigth: #e46769;
+//@colorTransparentDark: #000000b5;
+//@colorTransparentGreyDark: #646464b7;
+//@colorTransparentGreyLigth: #64646481;
+@border-left: #00ffff;
+
+//---Nav
+
+//---Footer
+//@colorFooterBackground: @colorFour;
+//@colorFooterBackText: @colorPrimaryText;
+//@colorFooterTitles: @colorThree;
+
+//---Backgrounds
+@background: #313232; 
+@backgroundFallBack1: #f3f5f9;
+@backgroundImage1: url(/images/background.svg);
 
 //---------------------Antd Colors----------------
-@primary-color: @colorPrimary;
-@info-color: @primary-color;
-@success-color: @colorSuccess;
-@processing-color: @colorPrimaryLigth;
-@error-color: @colorError;
-@text-color: @colorWhite; // major text color
-@text-color-secondary: @colorSecundaryText; // secondary text color
-@component-background: @colorDarkLighter; // modal background
-@heading-color: @colorWhite; // Titulos
+//@primary-color: @colorPrimary;
+//@info-color: @primary-color;
+//@success-color: @colorSuccess;
+//@processing-color: @colorPrimaryLigth;
+//@error-color: @colorError;
+//@text-color: @colorWhite; // major text color
+//@text-color-secondary: @colorSecondaryText; // secondary text color
+//@component-background: @colorDarkLighter; // modal background
+//@heading-color: @colorWhite; // Titulos
