--- a/public/styles/tema.less
+++ b/public/styles/tema.less
@@ -1,9 +1,14 @@
 /*----------------------------------------VARIABLES-------------------------------------*/
-@import: './colors.less';
 @font-face {
-  font-family: 'Questrial';
-  src: url('/fonts/Questrial/Questrial-Regular.ttf');
+  font-family: 'Roboto';
+  src: url('/fonts/Roboto/Roboto-Regular.ttf');
   font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Roboto';
+  src: url('/fonts/Roboto/Roboto-Bold.ttf');
+  font-weight: bold;
   font-style: normal;
 }
 
@@ -20,31 +25,73 @@ button, input[type="submit"], input[type="reset"] {
 
   html,
   body {
-    background-color: @backgroundFallBack1;
-    background: @backgroundImage1 no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    font-family: 'Questrial';
+    background-color: rgba(49, 50, 50, 1);
+    background-image: url(/images/home/UpperSegment/background.webp);
+    background-size: 100vw;
+    background-repeat: no-repeat;
+    background-position: 0 0, center;
+    padding: 15px;
+    width: 100%;
+    height: 100%;
     margin: 0px;
     padding: 0px;
+    overflow-x: hidden; 
   }
   p{
-    color: @colorSecundaryText;
-    font-size: 18px;
-  span{
     color: @colorPrimaryText;
-    font-size: 22px;
-    font-weight: bold;
-    margin: 0px 3px 0px 3px;
-  }
+    font-size: 18px;
+    span{
+      color: @colorSecondaryText;
+      font-size: 22px;
+      font-weight: bold;
+      line-break: 10px;
+    }
   }
   /*-------------------------------------UTILITY STYLES----------------------------------*/
   .center-block{
   display: flex;
   align-items: center;
   justify-content: center;
+  }
+  .center-90{
+    display: block;
+    width: 90%;
+    margin: 0px auto 0px auto;
+  }
+  .center-80{
+    display: block;
+    width: 80%;
+    margin: 0px auto 0px auto;
+  }
+  .center-70{
+    display: block;
+    width: 80%;
+    margin: 0px auto 0px auto;
+  }
+  .center-60{
+    display: block;
+    width: 80%;
+    margin: 0px auto 0px auto;
+  }
+  .center-50{
+    display: block;
+    width: 80%;
+    margin: 0px auto 0px auto;
+  }
+  .center-40{
+    display: block;
+    width: 80%;
+    margin: 0px auto 0px auto;
+  }
+  .center-30{
+    display: block;
+    width: 80%;
+    margin: 0px auto 0px auto;
+  }
+  .center-20{
+    display: block;
+    width: 80%;
+    margin: 0px auto 0px auto;
   }
   .col-vertical-align{
   display: flex;
